--- a/gluon-banner/Makefile
+++ b/gluon-banner/Makefile
@@ -8,7 +8,7 @@ PKG_BUILD_DIR := $(BUILD_DIR)/$(PKG_NAME)
 include $(INCLUDE_DIR)/package.mk
 
 define Package/gluon-banner
-  SECTION:=lohmar
+  SECTION:=rsk
   CATEGORY:=Customization
   TITLE:=Banner file replacement
   DEPENDS:=+gluon-core
