--- a/nightswitch/Makefile
+++ b/nightswitch/Makefile
@@ -1,6 +1,6 @@
 include $(TOPDIR)/rules.mk
 
-PKG_NAME:=lohmar-nightswitch
+PKG_NAME:=rsk-nightswitch
 PKG_VERSION:=2
 PKG_RELEASE:=2
 
@@ -8,13 +8,13 @@ PKG_BUILD_DIR := $(BUILD_DIR)/$(PKG_NAME)
 
 include $(INCLUDE_DIR)/package.mk
 
-define Package/lohmar-nightswitch
+define Package/rsk-nightswitch
   SECTION:=daemon
-  CATEGORY:=Freifunk Lohmar
+  CATEGORY:=Freifunk Rhein-Sieg
   TITLE:=Switch Wifi based on uci nighswitch config
 endef
 
-define Package/lohmar-nightswitch/description
+define Package/rsk-nightswitch/description
         Switch Wifi based on uci nightswitch config
 endef
 
@@ -28,11 +28,11 @@ endef
 define Build/Compile
 endef
 
-define Package/lohmar-nightswitch/install
+define Package/rsk-nightswitch/install
 		$(INSTALL_DIR) $(1)/usr/lib/micron.d/
 		$(INSTALL_DATA) files/usr/lib/micron.d/nightswitch $(1)/usr/lib/micron.d/nightswitch
-		$(INSTALL_DIR) $(1)/lib/lohmar/nightswitch/
-		$(INSTALL_BIN) files/lib/lohmar/nightswitch/nightswitch.sh $(1)/lib/lohmar/nightswitch/
+		$(INSTALL_DIR) $(1)/lib/rsk/nightswitch/
+		$(INSTALL_BIN) files/lib/rsk/nightswitch/nightswitch.sh $(1)/lib/rsk/nightswitch/
 endef
 
-$(eval $(call BuildPackage,lohmar-nightswitch))
+$(eval $(call BuildPackage,rsk-nightswitch))
