--- a/gluon-rsk-speedlimit/Makefile
+++ b/gluon-rsk-speedlimit/Makefile
@@ -11,7 +11,7 @@ define Package/gluon-rsk-speedlimit
   SECTION:=gluon
   CATEGORY:=Gluon
   TITLE:=Adjust mesh-vpn bandwith based on uci config
-  DEPENDS:=+gluon-core
+  DEPENDS:=+gluon-core +gluon-rsk-config
 endef
 
 define Build/Prepare
