--- a/gluon-next-node/Makefile
+++ b/gluon-next-node/Makefile
@@ -3,9 +3,11 @@ include $(TOPDIR)/rules.mk
 PKG_NAME:=gluon-next-node
 PKG_VERSION:=3
 
+
 PKG_BUILD_DIR := $(BUILD_DIR)/$(PKG_NAME)
 
-include $(GLUONDIR)/include/package.mk
+include $(INCLUDE_DIR)/package.mk
+
 
 
 define Package/gluon-next-node
